# WbeeInfer

./: CMakeLists.txt  README.md  main.cpp
include/: status_code.hpp
include/data/: load_data.hpp  tensor.hpp
include/layer/abstract/: layer.hpp  layer_factory.hpp
include/layer/details/: expression_layer.hpp  maxpooling_layer.hpp  relu_layer.hpp  sigmoid_layer.hpp
include/ops/: expression_op.hpp  maxpooling_op.hpp  op.hpp  relu_op.hpp  sigmoid_op.hpp
include/parser/: parse_expression.hpp
include/runtime/: ir.h  runtime_attr.hpp  runtime_datatype.hpp  runtime_ir.hpp  runtime_operand.hpp  runtime_operator.hpp  runtime_parameter.hpp
source/data/: load_data.cpp  tensor.cpp
source/layer/abstract/: layer.cpp  layer_factory.cpp
source/layer/details/: expression_layer.cpp  maxpooling_layer.cpp  relu_layer.cpp  sigmoid_layer.cpp
source/ops/: expression_op.cpp  maxpooling_op.cpp  ops.cpp  relu_op.cpp  sigmoid_op.cpp
source/parser/: parse_expression.cpp
source/runtime/: ir.cpp  runtime_ir.cpp  store_zip.cpp
test/: CMakeLists.txt  test_expression.cpp  test_load_data.cpp  test_main.cpp  test_maxpooling.cpp  test_rulu.cpp  test_runtime.cpp  test_sigmoid.cpp  test_tensor.cpp
tmp/test/: CMakeLists.txt  test_first.cpp  test_load_data.cpp  test_maxpooling.cpp  test_relu.cpp  test_runtime1.cpp  test_sigmoid.cpp  test_tensor.cpp
